--- a/app/sidebar.html
+++ b/app/sidebar.html
@@ -1,7 +1,9 @@
 <nav id="sidebar">
 
   <ul id="notes" ng-show="hasNotes()">
-    <li ng-repeat="note in notes()">
+    <li id="note_{{ note.id }}"
+      ng-repeat="note in notes() | orderBy: '-id' | limitTo: 10"
+      ng-click="loadNote(note)">
       <div class="note-title">{{ note.title }}</div>
       <div class="note-body">{{ note.body_text }}</div>
     </li>
