--- a/app/notes/notes.html
+++ b/app/notes/notes.html
@@ -8,6 +8,6 @@ Welcome to Notely.
     <textarea name="body_html" id="note_body_html" ng-model="note.body_html"></textarea>
   </p>
   <div class="form-action">
-    <input type="submit" name="commit" value="Create Note" class="btn btn-default">
+    <input type="submit" name="commit" value="{{ buttonText(note) }}" class="btn btn-default">
   </div>
 </form>
