Add button to clear note form

--- a/app/notes/notes.html
+++ b/app/notes/notes.html
@@ -1,6 +1,5 @@
-Welcome to Notely.
 
-<form ng-submit="commit()">
+<form ng-submit="saveNote()">
   <p>
     <input type="text" name="title" id="note_title" placeholder="Title your note" ng-model="note.title">
   </p>
@@ -8,6 +7,6 @@ Welcome to Notely.
     <textarea name="body_html" id="note_body_html" ng-model="note.body_html"></textarea>
   </p>
   <div class="form-action">
-    <input type="submit" name="commit" value="{{ buttonText(note) }}" class="btn btn-default">
+    <input type="submit" name="action" value="{{ buttonText(note) }}" class="btn btn-default">
   </div>
 </form>
