--- a/app/sidebar.html
+++ b/app/sidebar.html
@@ -1,5 +1,10 @@
 <nav id="sidebar">
 
+  <button class="new-note btn btn-default"
+    ng-click="clearNote()">
+    New Note
+  </button>
+
   <ul id="notes" ng-show="hasNotes()">
     <li id="note_{{ note.id }}"
       ng-repeat="note in notes() | orderBy: '-id' | limitTo: 10"
