--- a/app/notes/notes.html
+++ b/app/notes/notes.html
@@ -1,7 +1,10 @@
 
 <form ng-submit="saveNote()">
   <p>
-    <input type="text" name="title" id="note_title" placeholder="Title your note" ng-model="note.title">
+    <input type="text" name="title" id="note_title"
+      placeholder="Title your note"
+      ng-model="note.title"
+      focus-on="noteCleared">
   </p>
   <p>
     <textarea name="body_html" id="note_body_html" ng-model="note.body_html"></textarea>
