--- a/app/sidebar.html
+++ b/app/sidebar.html
@@ -2,6 +2,7 @@
 
   <button class="new-note btn btn-default"
     ng-click="clearNote()">
+    <i class="fa fa-plus-circle"></i>
     New Note
   </button>
 
