--- a/app/notes/notes.html
+++ b/app/notes/notes.html
@@ -7,7 +7,17 @@
       focus-on="noteCleared">
   </p>
   <p>
-    <textarea name="body_html" id="note_body_html" ng-model="note.body_html"></textarea>
+    <text-angular
+      id="note_body_html"
+      name="body_html"
+      ng-model="note.body_html"
+      placeholder="Just start typing..."
+      ta-toolbar="[
+        ['bold', 'italics', 'underline'],
+        ['ul', 'ol', 'indent', 'outdent'],
+        ['html'],
+        ['insertLink']
+      ]"></text-angular>
   </p>
   <div class="form-action">
     <input type="submit" name="action" value="{{ buttonText(note) }}" class="btn btn-default">
