--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,7 @@
   <script src="view2/view2.js"></script>
 
   <script src="notes/notes.js"></script>
+  <script src="login/login.js"></script>
 
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
