--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,19 @@
     <div class="row">
       <div class="col-xs-12">
         <header>
-          <div class="well">Notely</div>
+          <div class="well">
+            Notely
+            <div class="user-links">
+              <div ng-show="user().id">
+                Signed in as {{ user().name }}
+                |
+                <a ng-click="logout()">Logout</a>
+              </div>
+              <div ng-hide="user().id">
+                <a ng-click="goToSignIn()">Sign in</a>
+              </div>
+            </div>
+          </div>
         </header>
       </div>
     </div>
@@ -50,6 +62,7 @@
 
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
