--- a/app/sidebar.html
+++ b/app/sidebar.html
@@ -1,4 +1,4 @@
-<nav id="sidebar">
+<nav id="sidebar" ng-show="user().id">
 
   <button class="new-note btn btn-default"
     ng-click="clearNote()">
